# nomad-oasis-image-ientrance

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-publish.yml
configs/: nginx_http.conf  nginx_https.conf  nomad.yaml
